--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -321,6 +321,7 @@
             "add_witness_label": "Witness",
             "already": "Account is already in the list",
             "approve_worker": "Approve",
+            "cast_votes_through_one_operation": "Cast your votes for witness, committee and workers and broadcast them together.",
             "clear_proxy": "Remove proxy",
             "cm_approved_by": "Committee members approved by %(account)s",
             "cm_not_approved_by": "Committee members not approved by %(account)s",
@@ -357,7 +358,6 @@
             "save_finish": "Click save to finish",
             "set_proxy": "Set a proxy here",
             "start": "Start date",
-            "cast_votes_through_one_operation": "Cast your votes for witness, committee and workers and broadcast them together.",
             "status": {
                 "neutral": "Neutral",
                 "rejected": "Rejected",
@@ -1143,10 +1143,10 @@
             "account": "account"
         },
         "help": "Help",
+        "not_found": "Not found",
         "return_to_top": "Return to top",
         "scan_qr_code": "Scan QR code",
-        "set": "Set",
-        "not_found": "Not found"
+        "set": "Set"
     },
     "header": {
         "account": "Account",
@@ -1363,17 +1363,6 @@
             "url": "URL",
             "web_example": "Enter link to your committee proposal post"
         },
-        "witness": {
-            "confirm": "CONFIRM",
-            "create_witness": "Become a witness member",
-            "witness_account": "Witness Account",
-            "invalid_key": "Public Key is invalid",
-            "text": "After being voted in as an active witness you are added in the rotation of block producers and expected to produce blocks signed by your signing key and you are rewarded in BTS per produced block. Common criteria that help make your case are <ul><li>implementation of fallbacks (e.g. running a hot swap backup server) and appropriate server specifications to ensure a low number of missed blocks (e.g. high connectivity)</li><li>participation in block production and rolling releases of the testnet</li><li>provision of a public node for the community</li><li>publication of price feeds for the BitAssets</li></ul> Submit a link to your website or forum post explaining why you would be a exemplary member to attract enough votes to become active.",
-            "url": "URL",
-            "web_example": "Enter link to your witness proposal post",
-            "public_signing_key": "Public Signing Key",
-            "enter_public_signing_key": "Enter your public signing key"
-        },
         "confirmation": {
             "accept": "Yes",
             "cancel": "No",
@@ -1481,6 +1470,17 @@
             "quantity": "Quantity",
             "submit": "Withdraw",
             "withdraw": "Withdraw"
+        },
+        "witness": {
+            "confirm": "CONFIRM",
+            "create_witness": "Become a witness member",
+            "enter_public_signing_key": "Enter your public signing key",
+            "invalid_key": "Public Key is invalid",
+            "public_signing_key": "Public Signing Key",
+            "text": "After being voted in as an active witness you are added in the rotation of block producers and expected to produce blocks signed by your signing key and you are rewarded in BTS per produced block. Common criteria that help make your case are <ul><li>implementation of fallbacks (e.g. running a hot swap backup server) and appropriate server specifications to ensure a low number of missed blocks (e.g. high connectivity)</li><li>participation in block production and rolling releases of the testnet</li><li>provision of a public node for the community</li><li>publication of price feeds for the BitAssets</li></ul> Submit a link to your website or forum post explaining why you would be a exemplary member to attract enough votes to become active.",
+            "url": "URL",
+            "web_example": "Enter link to your witness proposal post",
+            "witness_account": "Witness Account"
         }
     },
     "news": {
@@ -1780,7 +1780,6 @@
         "medium_latency": "Medium latency",
         "midnightTheme": "Midnight",
         "my_nodes": "Personal",
-        "viewOnlyMode": "View only mode",
         "no": "No",
         "no_accounts": "This local wallet does not contain any accounts.",
         "node_already_exists": "Node with such URL already exists",
@@ -1820,6 +1819,7 @@
         "themes": "Theme",
         "unit": "Preferred unit of account",
         "valid_node_url": "Node URL must begin with ws:// or wss://",
+        "viewOnlyMode": "View only mode",
         "view_keys": "View keys",
         "wallet": "Local Wallet",
         "walletLockTimeout": "Wallet auto-lock time (in seconds, 0 to disable)",
@@ -2362,8 +2362,8 @@
         }
     },
     "voting": {
-        "title": "Voting",
-        "description": "The BitShares blockchain allows the holders of its core token BTS to vote on block producers (witnesses), committee members (blockchain governance), worker proposals (reimbursement for tasks and strategic decisions through BSIPs/Polls)."
+        "description": "The BitShares blockchain allows the holders of its core token BTS to vote on block producers (witnesses), committee members (blockchain governance), worker proposals (reimbursement for tasks and strategic decisions through BSIPs/Polls).",
+        "title": "Voting"
     },
     "walkthrough": {
         "buy_form": "Place buy orders using this form.",
