--- a/app/assets/locales/locale-es.json
+++ b/app/assets/locales/locale-es.json
@@ -321,6 +321,7 @@
             "add_witness_label": "Testigos",
             "already": "La cuenta ya está en la lista",
             "approve_worker": "Aprobar propuesta de trabajo",
+            "cast_votes_through_one_operation": "Cast your votes for witness, committee and workers and broadcast them together.",
             "clear_proxy": "Eliminar proxy",
             "cm_approved_by": "Los miembros del comité aprobados por %(account)s",
             "cm_not_approved_by": "Los miembros del comité no aprobados por %(account)s",
@@ -336,6 +337,8 @@
             "hide_legacy_proposals": "Ocultar propuestas viejos",
             "inactive": "Backup",
             "info": "Información",
+            "join_committee": "Join committee",
+            "join_witnesses": "Join Witnesses",
             "line": "Lìnea",
             "max_pay": "Pago total máximo",
             "missing": "Necesario",
@@ -1140,6 +1143,7 @@
             "account": "cuenta"
         },
         "help": "Ayudo",
+        "not_found": "Not found",
         "return_to_top": "Regresa hacia arriba",
         "scan_qr_code": "Escanar codigo de QR",
         "set": "Establecer"
@@ -1351,6 +1355,14 @@
         },
         "cancel": "cancelar",
         "close": "cerrar",
+        "committee": {
+            "confirm": "CONFIRM",
+            "create_committee": "Become a committee member",
+            "from": "From",
+            "text": "After being voted in as active committee you can help set policies and parameters for the BitShares blockchain including: <ul><li>Transaction fees</li><li>Parameters of BitAssets (e.g. market fees)</li><li>Blockchain parameters (e.g. block size & interval)</li><li>Referral and vesting parameters (e.g. cash back percent for life-time-members and vesting period)</li><li>Other governance matters</li></ul> Submit a link to your website or forum post explaining why yo would be a exemplary member to attract enough votes to become active. Committee members should have basic technical understanding of BitShares and bring knowledge and expertise in key aspects of governing an autonomous and self-sustaining blockchain. This is an unpaid position.",
+            "url": "URL",
+            "web_example": "Enter link to your committee proposal post"
+        },
         "confirmation": {
             "accept": "Si",
             "cancel": "No",
@@ -1458,6 +1470,17 @@
             "quantity": "Cantidad",
             "submit": "Retirar",
             "withdraw": "Retirar"
+        },
+        "witness": {
+            "confirm": "CONFIRM",
+            "create_witness": "Become a witness member",
+            "enter_public_signing_key": "Enter your public signing key",
+            "invalid_key": "Public Key is invalid",
+            "public_signing_key": "Public Signing Key",
+            "text": "After being voted in as an active witness you are added in the rotation of block producers and expected to produce blocks signed by your signing key and you are rewarded in BTS per produced block. Common criteria that help make your case are <ul><li>implementation of fallbacks (e.g. running a hot swap backup server) and appropriate server specifications to ensure a low number of missed blocks (e.g. high connectivity)</li><li>participation in block production and rolling releases of the testnet</li><li>provision of a public node for the community</li><li>publication of price feeds for the BitAssets</li></ul> Submit a link to your website or forum post explaining why you would be a exemplary member to attract enough votes to become active.",
+            "url": "URL",
+            "web_example": "Enter link to your witness proposal post",
+            "witness_account": "Witness Account"
         }
     },
     "news": {
@@ -1796,6 +1819,7 @@
         "themes": "Tema",
         "unit": "Unidad preferida para esta cuenta",
         "valid_node_url": "La URL del nodo debe comenzar con ws:// or wss://",
+        "viewOnlyMode": "View only mode",
         "view_keys": "Ver claves",
         "wallet": "Billetera local",
         "walletLockTimeout": "Tiempo de bloqueo automático de Wallet (seconds, 0 to disable)",
@@ -2336,6 +2360,10 @@
             "url": "El campo debe ser url",
             "urlNamed": "%(name)s debe ser url"
         }
+    },
+    "voting": {
+        "description": "The BitShares blockchain allows the holders of its core token BTS to vote on block producers (witnesses), committee members (blockchain governance), worker proposals (reimbursement for tasks and strategic decisions through BSIPs/Polls).",
+        "title": "Voting"
     },
     "walkthrough": {
         "buy_form": "Coloque las órdenes de compra usando este formulario.",
