--- a/app/assets/locales/locale-it.json
+++ b/app/assets/locales/locale-it.json
@@ -321,6 +321,7 @@
             "add_witness_label": "Witness",
             "already": "L'account è già nella lista",
             "approve_worker": "Approva",
+            "cast_votes_through_one_operation": "Cast your votes for witness, committee and workers and broadcast them together.",
             "clear_proxy": "Rimuovi proxy",
             "cm_approved_by": "Membri del comitato approvati da %(account)s",
             "cm_not_approved_by": "Membri del comitato non approvati da %(account)s",
@@ -336,6 +337,8 @@
             "hide_legacy_proposals": "Hide Legacy Proposals",
             "inactive": "Backup",
             "info": "Informazioni",
+            "join_committee": "Join committee",
+            "join_witnesses": "Join Witnesses",
             "line": "Linea",
             "max_pay": "Salario totale massimo",
             "missing": "Necessari",
@@ -1134,6 +1137,7 @@
             "account": "account"
         },
         "help": "Help",
+        "not_found": "Not found",
         "return_to_top": "Return to top",
         "scan_qr_code": "Scan QR code",
         "set": "Set"
@@ -1345,6 +1349,14 @@
         },
         "cancel": "cancel",
         "close": "close",
+        "committee": {
+            "confirm": "CONFIRM",
+            "create_committee": "Become a committee member",
+            "from": "From",
+            "text": "After being voted in as active committee you can help set policies and parameters for the BitShares blockchain including: <ul><li>Transaction fees</li><li>Parameters of BitAssets (e.g. market fees)</li><li>Blockchain parameters (e.g. block size & interval)</li><li>Referral and vesting parameters (e.g. cash back percent for life-time-members and vesting period)</li><li>Other governance matters</li></ul> Submit a link to your website or forum post explaining why yo would be a exemplary member to attract enough votes to become active. Committee members should have basic technical understanding of BitShares and bring knowledge and expertise in key aspects of governing an autonomous and self-sustaining blockchain. This is an unpaid position.",
+            "url": "URL",
+            "web_example": "Enter link to your committee proposal post"
+        },
         "confirmation": {
             "accept": "Sì",
             "cancel": "No",
@@ -1452,6 +1464,17 @@
             "quantity": "Quantity",
             "submit": "Preleva",
             "withdraw": "Withdraw"
+        },
+        "witness": {
+            "confirm": "CONFIRM",
+            "create_witness": "Become a witness member",
+            "enter_public_signing_key": "Enter your public signing key",
+            "invalid_key": "Public Key is invalid",
+            "public_signing_key": "Public Signing Key",
+            "text": "After being voted in as an active witness you are added in the rotation of block producers and expected to produce blocks signed by your signing key and you are rewarded in BTS per produced block. Common criteria that help make your case are <ul><li>implementation of fallbacks (e.g. running a hot swap backup server) and appropriate server specifications to ensure a low number of missed blocks (e.g. high connectivity)</li><li>participation in block production and rolling releases of the testnet</li><li>provision of a public node for the community</li><li>publication of price feeds for the BitAssets</li></ul> Submit a link to your website or forum post explaining why you would be a exemplary member to attract enough votes to become active.",
+            "url": "URL",
+            "web_example": "Enter link to your witness proposal post",
+            "witness_account": "Witness Account"
         }
     },
     "news": {
@@ -1790,6 +1813,7 @@
         "themes": "Tema",
         "unit": "Unità preferite per l'account",
         "valid_node_url": "L'URL del Nodo deve iniziare con ws:// oppure wss://",
+        "viewOnlyMode": "View only mode",
         "view_keys": "Vedi chiavi",
         "wallet": "Portafoglio",
         "walletLockTimeout": "Tempo di autoblocco del portafoglio (in secondi, 0 per disabilitare)",
@@ -2330,6 +2354,10 @@
             "url": "The field should be url",
             "urlNamed": "%(name)s should be url"
         }
+    },
+    "voting": {
+        "description": "The BitShares blockchain allows the holders of its core token BTS to vote on block producers (witnesses), committee members (blockchain governance), worker proposals (reimbursement for tasks and strategic decisions through BSIPs/Polls).",
+        "title": "Voting"
     },
     "walkthrough": {
         "buy_form": "Inserisci ordini di acquisto utilizzando questo modulo.",
