--- a/app/assets/locales/locale-ru.json
+++ b/app/assets/locales/locale-ru.json
@@ -321,6 +321,7 @@
             "add_witness_label": "Заверитель",
             "already": "Аккаунт уже в списке",
             "approve_worker": "Утвердить",
+            "cast_votes_through_one_operation": "Cast your votes for witness, committee and workers and broadcast them together.",
             "clear_proxy": "Убрать прокси",
             "cm_approved_by": "Члены комитета, утверждённые %(account)s",
             "cm_not_approved_by": "Члены комитета, не утверждённые %(account)s",
@@ -336,6 +337,8 @@
             "hide_legacy_proposals": "Скрыть устаревшие предложения",
             "inactive": "Резервные",
             "info": "Информация",
+            "join_committee": "Join committee",
+            "join_witnesses": "Join Witnesses",
             "line": "Очередь",
             "max_pay": "Максимальная общая выплата",
             "missing": "Необходимо",
@@ -1140,6 +1143,7 @@
             "account": "аккаунт"
         },
         "help": "Помощь",
+        "not_found": "Not found",
         "return_to_top": "Вернуться к началу",
         "scan_qr_code": "Сканировать QR-код",
         "set": "Задать"
@@ -1351,6 +1355,14 @@
         },
         "cancel": "отмена",
         "close": "закрыть",
+        "committee": {
+            "confirm": "CONFIRM",
+            "create_committee": "Become a committee member",
+            "from": "From",
+            "text": "After being voted in as active committee you can help set policies and parameters for the BitShares blockchain including: <ul><li>Transaction fees</li><li>Parameters of BitAssets (e.g. market fees)</li><li>Blockchain parameters (e.g. block size & interval)</li><li>Referral and vesting parameters (e.g. cash back percent for life-time-members and vesting period)</li><li>Other governance matters</li></ul> Submit a link to your website or forum post explaining why yo would be a exemplary member to attract enough votes to become active. Committee members should have basic technical understanding of BitShares and bring knowledge and expertise in key aspects of governing an autonomous and self-sustaining blockchain. This is an unpaid position.",
+            "url": "URL",
+            "web_example": "Enter link to your committee proposal post"
+        },
         "confirmation": {
             "accept": "Да",
             "cancel": "Нет",
@@ -1458,6 +1470,17 @@
             "quantity": "Количество",
             "submit": "Вывод",
             "withdraw": "Вывод"
+        },
+        "witness": {
+            "confirm": "CONFIRM",
+            "create_witness": "Become a witness member",
+            "enter_public_signing_key": "Enter your public signing key",
+            "invalid_key": "Public Key is invalid",
+            "public_signing_key": "Public Signing Key",
+            "text": "After being voted in as an active witness you are added in the rotation of block producers and expected to produce blocks signed by your signing key and you are rewarded in BTS per produced block. Common criteria that help make your case are <ul><li>implementation of fallbacks (e.g. running a hot swap backup server) and appropriate server specifications to ensure a low number of missed blocks (e.g. high connectivity)</li><li>participation in block production and rolling releases of the testnet</li><li>provision of a public node for the community</li><li>publication of price feeds for the BitAssets</li></ul> Submit a link to your website or forum post explaining why you would be a exemplary member to attract enough votes to become active.",
+            "url": "URL",
+            "web_example": "Enter link to your witness proposal post",
+            "witness_account": "Witness Account"
         }
     },
     "news": {
@@ -1796,6 +1819,7 @@
         "themes": "Тема",
         "unit": "Предпочтительные единицы счета",
         "valid_node_url": "URL-адрес узла должен начинаться с ws:// или wss://",
+        "viewOnlyMode": "View only mode",
         "view_keys": "Просмотреть ключи",
         "wallet": "Локальный кошелек",
         "walletLockTimeout": "Время автоблокировки кошелька (в секундах, 0 - для отключения)",
@@ -2336,6 +2360,10 @@
             "url": "Поле должно содержать URL",
             "urlNamed": "%(name)s должно быть URL"
         }
+    },
+    "voting": {
+        "description": "The BitShares blockchain allows the holders of its core token BTS to vote on block producers (witnesses), committee members (blockchain governance), worker proposals (reimbursement for tasks and strategic decisions through BSIPs/Polls).",
+        "title": "Voting"
     },
     "walkthrough": {
         "buy_form": "Разместить заявки на покупку, используя эту форму.",
