--- a/app/assets/locales/locale-zh.json
+++ b/app/assets/locales/locale-zh.json
@@ -321,6 +321,7 @@
             "add_witness_label": "见证人",
             "already": "账户已经在列表中",
             "approve_worker": "赞成",
+            "cast_votes_through_one_operation": "Cast your votes for witness, committee and workers and broadcast them together.",
             "clear_proxy": "移除投票代理",
             "cm_approved_by": "账户%(account)s赞同的理事会成员",
             "cm_not_approved_by": "账户%(account)s未赞同的理事会成员",
@@ -336,6 +337,8 @@
             "hide_legacy_proposals": "隐藏过期提案",
             "inactive": "备份",
             "info": "信息",
+            "join_committee": "Join committee",
+            "join_witnesses": "Join Witnesses",
             "line": "行",
             "max_pay": "最大预算",
             "missing": "仍需票数",
@@ -1140,6 +1143,7 @@
             "account": "账户"
         },
         "help": "帮助",
+        "not_found": "Not found",
         "return_to_top": "返回顶部",
         "scan_qr_code": "扫描二维码",
         "set": "设置"
@@ -1351,6 +1355,14 @@
         },
         "cancel": "取消",
         "close": "关闭",
+        "committee": {
+            "confirm": "CONFIRM",
+            "create_committee": "Become a committee member",
+            "from": "From",
+            "text": "After being voted in as active committee you can help set policies and parameters for the BitShares blockchain including: <ul><li>Transaction fees</li><li>Parameters of BitAssets (e.g. market fees)</li><li>Blockchain parameters (e.g. block size & interval)</li><li>Referral and vesting parameters (e.g. cash back percent for life-time-members and vesting period)</li><li>Other governance matters</li></ul> Submit a link to your website or forum post explaining why yo would be a exemplary member to attract enough votes to become active. Committee members should have basic technical understanding of BitShares and bring knowledge and expertise in key aspects of governing an autonomous and self-sustaining blockchain. This is an unpaid position.",
+            "url": "URL",
+            "web_example": "Enter link to your committee proposal post"
+        },
         "confirmation": {
             "accept": "是",
             "cancel": "否",
@@ -1458,6 +1470,17 @@
             "quantity": "数量",
             "submit": "提币",
             "withdraw": "提币"
+        },
+        "witness": {
+            "confirm": "CONFIRM",
+            "create_witness": "Become a witness member",
+            "enter_public_signing_key": "Enter your public signing key",
+            "invalid_key": "Public Key is invalid",
+            "public_signing_key": "Public Signing Key",
+            "text": "After being voted in as an active witness you are added in the rotation of block producers and expected to produce blocks signed by your signing key and you are rewarded in BTS per produced block. Common criteria that help make your case are <ul><li>implementation of fallbacks (e.g. running a hot swap backup server) and appropriate server specifications to ensure a low number of missed blocks (e.g. high connectivity)</li><li>participation in block production and rolling releases of the testnet</li><li>provision of a public node for the community</li><li>publication of price feeds for the BitAssets</li></ul> Submit a link to your website or forum post explaining why you would be a exemplary member to attract enough votes to become active.",
+            "url": "URL",
+            "web_example": "Enter link to your witness proposal post",
+            "witness_account": "Witness Account"
         }
     },
     "news": {
@@ -1796,6 +1819,7 @@
         "themes": "主题",
         "unit": "显示记账单位",
         "valid_node_url": "节点地址必须以 ws:// 或 wss:// 开头",
+        "viewOnlyMode": "View only mode",
         "view_keys": "查看密钥",
         "wallet": "本地钱包",
         "walletLockTimeout": "钱包自动锁定时间（秒，0 为禁用）",
@@ -2336,6 +2360,10 @@
             "url": "此字段必须为url链接",
             "urlNamed": "%(name)s必须为url链接"
         }
+    },
+    "voting": {
+        "description": "The BitShares blockchain allows the holders of its core token BTS to vote on block producers (witnesses), committee members (blockchain governance), worker proposals (reimbursement for tasks and strategic decisions through BSIPs/Polls).",
+        "title": "Voting"
     },
     "walkthrough": {
         "buy_form": "使用此表单下买单",
