--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -1687,10 +1687,11 @@
             "incorrect": "Is incorrect",
             "cancel": "Cancel",
             "oppose": "Oppose",
-            "add_opinion": "Add opinion",
-            "yes": "Proves true",
-            "no": "Is incorrect",
-            "all": "All"
+            "add_prediction": "Add prediction",
+            "all": "All",
+            "premium": "Premium",
+            "commission": "Commission",
+            "potential_profit": "Potential Winnings"
         },
         "create_market_modal": {
             "title": "Create prediction market",
