--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -104,7 +104,8 @@
             "suspected_scammer": "Suspected Scammer",
             "unknown": "Unknown member",
             "upgrade_lifetime": "Buy Lifetime Subscription",
-            "vested": "Vested"
+            "vested": "Vested",
+            "action": "Action"
         },
         "mine": "My account",
         "more": "see more",
